# DORAEmbodiedIntelligence

./: .gitignore  .python-version  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WELCOME_DEBIAN.md  pyproject.toml
.github/: copilot-instructions.md
carla_agent/: __init__.py  agent_wrapper.py
config/: agent_config.json  carla_dora_dataflow.yml  config.yaml
docs/: DEVELOPMENT.md  ENVIRONMENT_MIGRATION_REPORT.md  INSTALLATION.md  INTEGRATION_TEST_GUIDE.md  README.md  STAGE_2_3_COMPLETION_REPORT.md
dora_nodes/: __init__.py
dora_nodes/control/: vehicle_controller.py
dora_nodes/planning/: simple_planner.py
dora_nodes/sensors/: sensor_receiver.py
my_autonomous_driver/: dataflow.yml
my_autonomous_driver/nodes/: control_node.py  receiver_node.py
my_autonomous_driver/operators/: planner_operator.py
scripts/: project_overview.sh  start_carla_agent.sh  start_dora.sh  start_system.sh  test_minimal_udp_receive.py  test_udp.py  verify_environment.sh
src/carla_dora_sim/: __init__.py
tests/: __init__.py  test_agent.py  test_integration.py
