[project]
name = "carla-dora-sim"
version = "0.1.0"
description = "CARLA + DORA Joint Autonomous Driving Simulation System"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "pillow>=10.0.0",
    "msgpack>=1.0.0",
    "pyyaml>=6.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
