[project]
name = "carla-dora-sim"
version = "0.1.0"
description = "CARLA + DORA Joint Autonomous Driving Simulation System"
readme = "README.md"
requires-python = ">=3.7,<3.8"
dependencies = [
    "numpy>=1.19.0,<1.22",
    "pygame>=2.0.0,<2.6",
    "pillow>=8.0.0,<10",
    "msgpack>=1.0.0",
    "pyyaml>=5.4.0",
    "pyarrow>=3.0.0,<15",
    "dictor>=0.1.12",
    "requests>=2.31.0",
    "opencv-python>=4.12.0.88",
    "tabulate>=0.9.0",
    "pexpect>=4.9.0",
    "transforms3d>=0.4.2",
    "networkx==2.2",
    "setuptools>=68.0.0",
    "dora-rs>=0.3.13",
    "six>=1.17.0",
    "py-trees==0.8.3",
    "simple-watchdog-timer>=0.1.1",
    "shapely>=2.0.7",
    "ephem>=4.2",
    "xmlschema>=2.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=4.6.0,<7",
    "black>=20.8b1,<23",
    "flake8>=3.8.0,<4",
    "mypy>=0.910,<1",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
